@startuml FormsignDB UML Diagram

' Configuration
skinparam monochrome true
skinparam classAttributeIconSize 0

' Entités (Tables)
class useraccounts {
  +id: varchar(36) [PK]
  --
  +folder_id: varchar(36) [FK]
  +api_token: varchar(255)
  +created_at: datetime
  +updated_at: datetime
}

class folders {
  +id: varchar(36) [PK]
  --
  +name: varchar(255)
  +created_at: datetime
  +updated_at: datetime
}
class senders {
  +id: varchar(36) [PK]
  --
  +email: varchar(255)
  +status: varchar(50)
  +created_at: datetime
  +updated_at: datetime
}
class signaturerequests {
  +id: varchar(36) [PK]
  --
  +sender_id: varchar(36) [FK]
  +folder_id: varchar(36) [FK] nullable
  +name: varchar(255)
  +email_message: longtext
  +expiration_date: date
  +timezone: varchar(50)
  +signers_allowed_to_decline: tinyint
  +status: varchar(50)
  +audit_logs: json
  +reminder_settings: json
  +webhooks: json
  +created_at: datetime
  +updated_at: datetime
}

class documents {
  +id: varchar(36) [PK]
  --
  +signature_request_id: varchar(36) [FK]
  +insert_after_id: varchar(36) nullable
  +name: varchar(255)
  +file: longtext
  +is_signable: tinyint(1)
  +initial_hash: varchar(64)
  +signed_hash: varchar(64)
  +signature_settings: json
  +initial_settings: json
  +created_at: datetime
  +updated_at: datetime
}

class signers {
  +id: varchar(36) [PK]
  --
  +signature_request_id: varchar(36) [FK]
  +insert_after_id: varchar(36) nullable
  +first_name: varchar(100)
  +last_name: varchar(100)
  +email: varchar(255) [UNIQUE]
  +phone_number: varchar(20)
  +signature_authentication_mode: varchar(50)
  +sms_notification_message: longtext
  +has_signed: tinyint(1)
  +ip_address: varchar(45)
  +authentication_datetime: datetime
  +signature_datetime: datetime
  +created_at: datetime
  +updated_at: datetime
}

' Relations (Clés étrangères)
senders ||--o{ signaturerequests : sender_id
folders ||--o{ useraccounts : folder_id
folders ||--o{ signaturerequests : folder_id
signaturerequests ||--o{ documents : signature_request_id
signaturerequests ||--o{ signers : signature_request_id

@enduml